--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
- #panel {
+body { background-color: #75FF92; }
+
+#panel {
   border-radius: 25px;
   background: #73AD21;
   padding: 20px;
   height: 50px;
+}
+
+#gradi {
+  background-image: linear-gradient(red, yellow);
 }
